<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/share_task"
        android:icon="@drawable/share"
        android:title="@string/share"
        />
    <item android:id="@+id/copy_task"
        android:icon="@drawable/copy"
        android:title="@string/copy"
        />
    <item android:id="@+id/delete_task"
        android:icon="@drawable/delete"
        android:title="@string/delete"
        />
    <item
        android:id="@+id/done_task"
        android:icon="@drawable/sharp_check_24"
        android:title="@string/done"
        />
    <item android:id="@+id/edit"
        android:icon="@drawable/edit"
        android:title="@string/edit"
        />

</menu>
